Bunch of UI tweaks  - Fix alignement of key value pairs  - Add space between error message and details section

--- a/server/webapp/WEB-INF/rails/webpack/views/pages/config_repos/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/config_repos/index.scss
@@ -173,3 +173,11 @@ code {
   border-top: 1px solid $failed;
 }
 
+.config-repo-details-section-properties {
+  margin-top: 5px;
+  margin-left: -4px;
+}
+
+.error-message {
+  margin-bottom: 25px;
+}
